handling back button in macro screens better. adding icons to macro screens. adding delete macro functionality

--- a/app/src/main/res/layout/row_macro_file.xml
+++ b/app/src/main/res/layout/row_macro_file.xml
@@ -2,26 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" 
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    >
     
-    <Button
+    <ImageView
         android:id="@+id/editBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="Edit"
+        android:src="@drawable/icon_edit"
+        android:layout_centerVertical="true"
          />
 
-    <Button
+    <ImageView
         android:id="@+id/runBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/editBtn"
         android:layout_toStartOf="@+id/editBtn"
-        android:text="Run"
+        android:src="@drawable/icon_play"
+        android:layout_marginRight="20dp"
+        android:layout_centerVertical="true"
          />
 
     <TextView
@@ -34,5 +39,6 @@
         android:layout_toLeftOf="@+id/runBtn"
         android:layout_toStartOf="@+id/runBtn"
         android:text=""
+        android:textColor="#aaaaaa"
         android:textSize="24sp" />
 </RelativeLayout>
