--- a/app/src/main/res/layout/terminal_layout.xml
+++ b/app/src/main/res/layout/terminal_layout.xml
@@ -81,7 +81,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Macros"
+            android:text="REPL Macros"
             android:textColor="#aaaaaa"
             android:textSize="28sp"
             android:layout_alignParentLeft="true"
